--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,10 @@
         <activity
             android:name=".HomePage"
             android:exported="false"></activity>
+        <activity
+            android:name=".ResetPassword"
+            android:exported="false">
+        </activity>
     </application>
     <uses-permission android:name="android.permission.INTERNET" />
 
